<resources>
    <string name="app_name">InMovies</string>
    <string name="title_home">Home</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_search">Search</string>
    <string name="appBarAttribution">Powered By</string>
    <string name="appBarBrowseMovies">Browse through movies</string>
    <string name="appBarHello">Hello!!</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="filter_movie_http">Movie Detail</string>
    <string name="filter_movie_inmovies">Movie Detail</string>
    <string name="error_page_text">OOPS!! We could not find that page</string>
    <string name="post_error_button_text">Try exploring Movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="likes">Likes</string>
    <string name="dummy_release_date">2021-07-21</string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview</string>
    <string name="dummy_rating">8.9</string>
    <string name="dummy_like">488</string>
    <string name="logo">TMDB Logo</string>
</resources>