<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.inmovies.inmovies.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.inmovies.inmovies.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.inmovies.inmovies.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_movie_details"
        android:name="com.inmovies.inmovies.ui.moviedetails.MovieDetailsFragment"
        android:label="fragment_movie_details"
        tools:layout="@layout/fragment_movie_details" >
        <argument
            android:name="MovieDetail"
            app:argType="com.inmovies.inmovies.models.MovieModel" />
    </fragment>
    <action android:id="@+id/action_global_navigation_movie_details"
        app:destination="@id/navigation_movie_details" />
</navigation>